## Process this file with automake to create Makefile.in.

JAR = @JAR@
JAVAC = @JAVAC@
JAVACFLAGS = @JAVACFLAGS@

main_jar = ../vwdiff.jar
BUILT_SOURCES = $(main_jar)
data_DATA = $(main_jar)
EXTRA_DIST = \
  $(srcdir)/HTTPClient/AuthSchemeNotImplException.java \
  $(srcdir)/HTTPClient/AuthorizationHandler.java \
  $(srcdir)/HTTPClient/AuthorizationInfo.java \
  $(srcdir)/HTTPClient/AuthorizationModule.java \
  $(srcdir)/HTTPClient/AuthorizationPrompter.java \
  $(srcdir)/HTTPClient/BufferedInputStream.java \
  $(srcdir)/HTTPClient/CIHashtable.java \
  $(srcdir)/HTTPClient/ChunkedInputStream.java \
  $(srcdir)/HTTPClient/Codecs.java \
  $(srcdir)/HTTPClient/ContentEncodingModule.java \
  $(srcdir)/HTTPClient/ContentMD5Module.java \
  $(srcdir)/HTTPClient/Cookie.java \
  $(srcdir)/HTTPClient/Cookie2.java \
  $(srcdir)/HTTPClient/CookieModule.java \
  $(srcdir)/HTTPClient/CookiePolicyHandler.java \
  $(srcdir)/HTTPClient/DefaultAuthHandler.java \
  $(srcdir)/HTTPClient/DefaultModule.java \
  $(srcdir)/HTTPClient/FilenameMangler.java \
  $(srcdir)/HTTPClient/GlobalConstants.java \
  $(srcdir)/HTTPClient/HTTPClientModule.java \
  $(srcdir)/HTTPClient/HTTPClientModuleConstants.java \
  $(srcdir)/HTTPClient/HTTPConnection.java \
  $(srcdir)/HTTPClient/HTTPResponse.java \
  $(srcdir)/HTTPClient/HashVerifier.java \
  $(srcdir)/HTTPClient/HttpHeaderElement.java \
  $(srcdir)/HTTPClient/HttpOutputStream.java \
  $(srcdir)/HTTPClient/HttpURLConnection.java \
  $(srcdir)/HTTPClient/IdempotentSequence.java \
  $(srcdir)/HTTPClient/LinkedList.java \
  $(srcdir)/HTTPClient/Log.java \
  $(srcdir)/HTTPClient/MD5.java \
  $(srcdir)/HTTPClient/MD5InputStream.java \
  $(srcdir)/HTTPClient/ModuleException.java \
  $(srcdir)/HTTPClient/NVPair.java \
  $(srcdir)/HTTPClient/ParseException.java \
  $(srcdir)/HTTPClient/ProtocolNotSuppException.java \
  $(srcdir)/HTTPClient/RedirectionModule.java \
  $(srcdir)/HTTPClient/Request.java \
  $(srcdir)/HTTPClient/RespInputStream.java \
  $(srcdir)/HTTPClient/Response.java \
  $(srcdir)/HTTPClient/ResponseHandler.java \
  $(srcdir)/HTTPClient/RetryException.java \
  $(srcdir)/HTTPClient/RetryModule.java \
  $(srcdir)/HTTPClient/RoRequest.java \
  $(srcdir)/HTTPClient/RoResponse.java \
  $(srcdir)/HTTPClient/SocksClient.java \
  $(srcdir)/HTTPClient/SocksException.java \
  $(srcdir)/HTTPClient/StreamDemultiplexor.java \
  $(srcdir)/HTTPClient/TransferEncodingModule.java \
  $(srcdir)/HTTPClient/URI.java \
  $(srcdir)/HTTPClient/UncompressInputStream.java \
  $(srcdir)/HTTPClient/Util.java \
  $(srcdir)/HTTPClient/http/Handler.java \
  $(srcdir)/HTTPClient/https/Handler.java \
  $(srcdir)/HTTPClient/shttp/Handler.java \
  $(srcdir)/com/keypoint/PngEncoder.java \
  $(srcdir)/com/keypoint/PngEncoderB.java \
  $(srcdir)/org/metastatic/vwdiff/AuthFile.java \
  $(srcdir)/org/metastatic/vwdiff/Config.java \
  $(srcdir)/org/metastatic/vwdiff/HTTPException.java \
  $(srcdir)/org/metastatic/vwdiff/HTTPRequest.java \
  $(srcdir)/org/metastatic/vwdiff/HTTPResponse.java \
  $(srcdir)/org/metastatic/vwdiff/Main.java \
  $(srcdir)/org/metastatic/vwdiff/MemoryAppender.java \
  $(srcdir)/org/metastatic/vwdiff/Server.java \
  $(srcdir)/org/metastatic/vwdiff/Target.java \
  $(srcdir)/org/metastatic/vwdiff/version.java.in

sources = \
  $(srcdir)/HTTPClient/AuthSchemeNotImplException.java \
  $(srcdir)/HTTPClient/AuthorizationHandler.java \
  $(srcdir)/HTTPClient/AuthorizationInfo.java \
  $(srcdir)/HTTPClient/AuthorizationModule.java \
  $(srcdir)/HTTPClient/AuthorizationPrompter.java \
  $(srcdir)/HTTPClient/BufferedInputStream.java \
  $(srcdir)/HTTPClient/CIHashtable.java \
  $(srcdir)/HTTPClient/ChunkedInputStream.java \
  $(srcdir)/HTTPClient/Codecs.java \
  $(srcdir)/HTTPClient/ContentEncodingModule.java \
  $(srcdir)/HTTPClient/ContentMD5Module.java \
  $(srcdir)/HTTPClient/Cookie.java \
  $(srcdir)/HTTPClient/Cookie2.java \
  $(srcdir)/HTTPClient/CookieModule.java \
  $(srcdir)/HTTPClient/CookiePolicyHandler.java \
  $(srcdir)/HTTPClient/DefaultAuthHandler.java \
  $(srcdir)/HTTPClient/DefaultModule.java \
  $(srcdir)/HTTPClient/FilenameMangler.java \
  $(srcdir)/HTTPClient/GlobalConstants.java \
  $(srcdir)/HTTPClient/HTTPClientModule.java \
  $(srcdir)/HTTPClient/HTTPClientModuleConstants.java \
  $(srcdir)/HTTPClient/HTTPConnection.java \
  $(srcdir)/HTTPClient/HTTPResponse.java \
  $(srcdir)/HTTPClient/HashVerifier.java \
  $(srcdir)/HTTPClient/HttpHeaderElement.java \
  $(srcdir)/HTTPClient/HttpOutputStream.java \
  $(srcdir)/HTTPClient/HttpURLConnection.java \
  $(srcdir)/HTTPClient/IdempotentSequence.java \
  $(srcdir)/HTTPClient/LinkedList.java \
  $(srcdir)/HTTPClient/Log.java \
  $(srcdir)/HTTPClient/MD5.java \
  $(srcdir)/HTTPClient/MD5InputStream.java \
  $(srcdir)/HTTPClient/ModuleException.java \
  $(srcdir)/HTTPClient/NVPair.java \
  $(srcdir)/HTTPClient/ParseException.java \
  $(srcdir)/HTTPClient/ProtocolNotSuppException.java \
  $(srcdir)/HTTPClient/RedirectionModule.java \
  $(srcdir)/HTTPClient/Request.java \
  $(srcdir)/HTTPClient/RespInputStream.java \
  $(srcdir)/HTTPClient/Response.java \
  $(srcdir)/HTTPClient/ResponseHandler.java \
  $(srcdir)/HTTPClient/RetryException.java \
  $(srcdir)/HTTPClient/RetryModule.java \
  $(srcdir)/HTTPClient/RoRequest.java \
  $(srcdir)/HTTPClient/RoResponse.java \
  $(srcdir)/HTTPClient/SocksClient.java \
  $(srcdir)/HTTPClient/SocksException.java \
  $(srcdir)/HTTPClient/StreamDemultiplexor.java \
  $(srcdir)/HTTPClient/TransferEncodingModule.java \
  $(srcdir)/HTTPClient/URI.java \
  $(srcdir)/HTTPClient/UncompressInputStream.java \
  $(srcdir)/HTTPClient/Util.java \
  $(srcdir)/HTTPClient/http/Handler.java \
  $(srcdir)/HTTPClient/https/Handler.java \
  $(srcdir)/HTTPClient/shttp/Handler.java \
  $(srcdir)/com/keypoint/PngEncoder.java \
  $(srcdir)/com/keypoint/PngEncoderB.java \
  $(srcdir)/org/metastatic/vwdiff/AuthFile.java \
  $(srcdir)/org/metastatic/vwdiff/Config.java \
  $(srcdir)/org/metastatic/vwdiff/HTTPException.java \
  $(srcdir)/org/metastatic/vwdiff/HTTPRequest.java \
  $(srcdir)/org/metastatic/vwdiff/HTTPResponse.java \
  $(srcdir)/org/metastatic/vwdiff/Main.java \
  $(srcdir)/org/metastatic/vwdiff/MemoryAppender.java \
  $(srcdir)/org/metastatic/vwdiff/Server.java \
  $(srcdir)/org/metastatic/vwdiff/Target.java \
  $(srcdir)/org/metastatic/vwdiff/version.java

classes = $(patsubst $(srcdir)/%.java,../classes/%.class,$(sources))

$(main_jar): $(classes)
	$(JAR) cmf $(top_srcdir)/etc/vwdiff.mf $(main_jar) -C ../classes com -C ../classes org -C ../classes HTTPClient

$(classes): ../classes/%.class: $(srcdir)/%.java
	$(JAVAC) $(JAVACFLAGS) -d ../classes $<
